// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`delete ep comment > not allowed not login 1`] = `
Object {
  "code": "NEED_LOGIN",
  "error": "Unauthorized",
  "message": "you need to login before delete a comment",
  "statusCode": 401,
}
`;

exports[`delete ep comment > not allowed wrong user 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Unauthorized",
  "message": "you don't have permission to delete a comment which is not yours",
  "statusCode": 401,
}
`;

exports[`delete ep comment > ok 1`] = `Object {}`;
